--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="instructions">Press the button for a delicious joke!</string>
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="endpoint_root_url">http://10.0.2.2:8080/_ah/api/</string>
+    <string name="free_variant">free</string>
+    <string name="paid_variant">paid</string>
 </resources>
